--- a/views/task-dash.ejs
+++ b/views/task-dash.ejs
@@ -132,6 +132,12 @@
               </div>
               </div>
                -->
+              <!-- Button trigger modal -->
+              <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal9">
+                Launch demo modal
+              </button> -->
+
+              <!-- Modal -->
               <!-- Modal -->
               <div class="modal fade modal-lg"  id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog"  role="document">
