phase 1 modified front-end

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,7 @@
           </div>
         </div>
       </div>
+      <div class="mx-lg-3 px-3">
     <div class="container px-4 mx-lg-5 p1 rounded-2 py-3 pb-1 my-2 mt-0" id="hanging-icons">
         <h2 class="pb-2 border-bottom fw-bold h1">Features</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -90,6 +91,7 @@
           </div>
         </div>
     </div>
+  </div>
     <div class="container p1 rounded-1">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top " >
           <div class="col-md-4 d-flex align-items-center">
